--- a/ETL_Mini_Project_Load_SQL.ipynb
+++ b/ETL_Mini_Project_Load_SQL.ipynb
@@ -681,11 +681,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e1c5f6c7-f781-49d3-a95e-da39a53a350f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# dispose of sql engine to close connection to database\n",
+    "engine.dispose()"
+   ]
   }
  ],
  "metadata": {
