Add Write-Up and Clean up code

--- a/ETL_Mini_Project_Analysis.ipynb
+++ b/ETL_Mini_Project_Analysis.ipynb
@@ -211,19 +211,19 @@
     "    order_by(func.count(campaign.cf_id).\\\n",
     "    desc()).all()\n",
     "\n",
-    "# Convert query result to a DataFrame for visualization\n",
+    "# Convert result to a DataFrame\n",
     "df = pd.DataFrame(category_success, columns=['category_id', 'successful_campaigns'])\n",
     "\n",
-    "# Load the category names\n",
+    "# Load the category data\n",
     "category_data = session.query(category).all()\n",
     "\n",
-    "# Convert category_data to DataFrame\n",
+    "# Convert to DataFrame\n",
     "category_df = pd.DataFrame([(c.category_id, c.category) for c in category_data], columns=['category_id', 'category'])\n",
     "\n",
-    "# Merge the category names\n",
+    "# Merge category data\n",
     "df = df.merge(category_df, on='category_id', how='left')\n",
     "\n",
-    "# Plot the results\n",
+    "# Plot results\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.bar(df['category'], df['successful_campaigns'])\n",
     "plt.xlabel('Category')\n",
@@ -231,7 +231,7 @@
     "plt.title('Campaign Success by SubCategory')\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -445,7 +445,7 @@
     "                            campaign.outcome\n",
     "                            ).all()\n",
     "\n",
-    "# Convert query result to a DataFrame\n",
+    "# Convert result to a DataFrame\n",
     "campaign_outcomes_df = pd.DataFrame(campaign_outcomes_query, columns=['month', 'outcome', 'count'])\n",
     "\n",
     "# Pivot the data to get months as index and outcomes as columns\n",
@@ -463,46 +463,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54c775aa-796c-476d-a603-e9b8c5069aae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e7c0924-7fe7-41d2-b65e-b01e60a87918",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07885521-9e01-415c-b7e4-6d18e4b5ed46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e47453a-4db2-486c-b4c3-eb062453f90e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b1d8f12-1eb9-4380-b9dd-c8de7499e80f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -525,14 +485,6 @@
     "# dispose of sql engine to close connection to database\n",
     "engine.dispose()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b5c3c3f-9e07-4226-b9ec-c7610f427782",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
